# SMX_research

./: .gitignore  .gitmodules  XRF_datasets_summary.md  config.py  debugging.py  explaining.py  models.py  plan.md  preprocessing.py  pyproject.toml  requirements.txt  synthetic.py  xai_metrics_experiment.md
experiments/: run_analysis.py  run_experiment.py  run_permutation.py  run_shap.py  zone_cutter.ipynb
experiments/MLP/bank_notes/: faithfulness_bank_notes.csv  feature_importance.csv  lrc_cov_natural.csv  lrc_pert_natural.csv  pca_aggregator_bank_notes.ipynb  performance_metrics.csv  permutation_bank_notes.csv  rbo_rank.csv  shap_bank_notes.csv  technique_metrics.csv
experiments/MLP/ecigar/: faithfulness_ecigar.csv  feature_importance.csv  performance_metrics.csv  permutation_ecigar.csv  rbo_rank.csv  shap_ecigar.csv  technique_metrics.csv
experiments/MLP/forage/: faithfulness_forage.csv  feature_importance.csv  (+8 more)
real_datasets/xrf/: bank_notes.csv  bank_notes.json  ecigar.csv  ecigar.json  forage.csv  forage.json  milk.csv  milk.json  sediments.csv  sediments.json  soil.csv  soil.json  soil_hpge.csv  soil_nai.csv  soil_nai.json  soil_nai2.csv  soil_nai_cambe.csv  soil_nai_toledo.csv  soil_types.json  soil_types_hpge.csv  soil_types_nai.csv  soil_types_nai.json  soil_types_nai2.csv  soil_types_unir.csv  soil_types_unir.json  soil_vnir.csv  soil_vnir.json  soyben.csv  soyben.json  sweet_pepper.json  synthetic.csv  synthetic.json  tomato.csv  tomato.json
smx/: debugging.py  explaining.py  modeling.py
smx_research/: __init__.py
smx_temp/: config.py  synthetic.py
(+1114 files in other folders)
