[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smx_research"
version = "0.1.0"
description = "Research infrastructure for SMX experiments — preprocessing, models, dataset configs, and debugging utilities"
readme = "plan.md"
requires-python = ">=3.9"
license = { text = "MIT" }

# smx must be installed separately: pip install -e ./SMX
dependencies = [
    "smx",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "networkx>=3.0",
    "plotly>=5.0",
    "kennard-stone>=1.0",
]

[project.optional-dependencies]
dev = [
    "shap",
    "rbo",
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["smx_research"]
